// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JetpackSignup should render 1`] = `
<JetpackConnectMainWrapper
  isWide={false}
>
  <div
    className="jetpack-connect__authorize-form"
  >
    <Connect(Localized(AuthFormHeader))
      authQuery={
        Object {
          "authApproved": false,
          "blogname": "Example Blog",
          "clientId": 98765,
          "from": "banner-44-slide-1-dashboard",
          "homeUrl": "http://an.example.site",
          "jpVersion": "5.4",
          "nonce": "fooBarNonce",
          "redirectAfterAuth": "http://an.example.site/wp-admin/admin.php?page=jetpack",
          "redirectUri": "http://an.example.site/wp-admin/admin.php?page=jetpack&action=authorize&_wpnonce=fooBarNonce&redirect=http%3A%2F%2Fan.example.site%2Fwp-admin%2Fadmin.php%3Fpage%3Djetpack",
          "scope": "administrator:fooBarBaz",
          "secret": "fooBarSecret",
          "site": "http://an.example.site",
          "siteIcon": "",
          "siteUrl": "http://an.example.site",
          "state": "1",
          "userEmail": "email@an.example.site",
        }
      }
    />
    <Connect(Localized(SignupForm))
      disabled={false}
      email="email@an.example.site"
      footerLink={
        <LoggedOutFormLinks>
          <LoggedOutFormLinkItem
            href="https://wordpress.com/wp-login.php?redirect_to=%2Fjetpack%2Fconnect%2Fauthorize%3Fauth_approved%3Dtrue&email_address=email%40an.example.site"
          >
            Already have an account? Sign in
          </LoggedOutFormLinkItem>
          <Localized(JetpackConnectHelpButton)
            onClick={[Function]}
          />
        </LoggedOutFormLinks>
      }
      redirectToAfterLoginUrl="/jetpack/connect/authorize?auth_approved=true"
      submitButtonText="Sign Up and Connect Jetpack"
      submitForm={[Function]}
      submitting={false}
      suggestedUsername=""
    />
  </div>
</JetpackConnectMainWrapper>
`;

exports[`JetpackSignup should render with locale suggestions 1`] = `
<JetpackConnectMainWrapper
  isWide={false}
>
  <div
    className="jetpack-connect__authorize-form"
  >
    <LocaleSuggestions
      locale="es"
      path="/jetpack/connect/authorize/es"
    />
    <Connect(Localized(AuthFormHeader))
      authQuery={
        Object {
          "authApproved": false,
          "blogname": "Example Blog",
          "clientId": 98765,
          "from": "banner-44-slide-1-dashboard",
          "homeUrl": "http://an.example.site",
          "jpVersion": "5.4",
          "nonce": "fooBarNonce",
          "redirectAfterAuth": "http://an.example.site/wp-admin/admin.php?page=jetpack",
          "redirectUri": "http://an.example.site/wp-admin/admin.php?page=jetpack&action=authorize&_wpnonce=fooBarNonce&redirect=http%3A%2F%2Fan.example.site%2Fwp-admin%2Fadmin.php%3Fpage%3Djetpack",
          "scope": "administrator:fooBarBaz",
          "secret": "fooBarSecret",
          "site": "http://an.example.site",
          "siteIcon": "",
          "siteUrl": "http://an.example.site",
          "state": "1",
          "userEmail": "email@an.example.site",
        }
      }
    />
    <Connect(Localized(SignupForm))
      disabled={false}
      email="email@an.example.site"
      footerLink={
        <LoggedOutFormLinks>
          <LoggedOutFormLinkItem
            href="https://es.wordpress.com/wp-login.php?redirect_to=%2Fjetpack%2Fconnect%2Fauthorize%3Fauth_approved%3Dtrue&email_address=email%40an.example.site"
          >
            Already have an account? Sign in
          </LoggedOutFormLinkItem>
          <Localized(JetpackConnectHelpButton)
            onClick={[Function]}
          />
        </LoggedOutFormLinks>
      }
      locale="es"
      redirectToAfterLoginUrl="/jetpack/connect/authorize?auth_approved=true"
      submitButtonText="Sign Up and Connect Jetpack"
      submitForm={[Function]}
      submitting={false}
      suggestedUsername=""
    />
  </div>
</JetpackConnectMainWrapper>
`;
